--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="02_youtube/">유튜브 클론코딩</a></li>
         <li><a href="01_instargram/">인스타그램 클론코딩</a></li>
-
+        <li><a href="03_js">JS 미션 문제풀이</a></li>
         <li><a href="">넷플릭스 클론코딩</a></li>
         <li><a href="">To Do app</a></li>
         <!-- <li><a href=""></a></li> -->
